# energy-analytics

./: .claudeignore  .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.json  main.py  pyproject.toml  pytest.ini  query_db.py  test_api.py
.claude/: settings.local.json
scripts/: consumption_pipeline.py  query_db.py  run_analytics.py  run_consumption.py  run_stations.py  stations_pipeline.py
sql/: consumption.sql  stations.sql
src/: main.py  run_analytics.py  run_consumption_pipeline.py  run_stations_pipeline.py
src/analytics/: consumption.py  consumption_queries.py  stations.py  stations_queries.py
src/consumption/: fetcher.py  processor.py  storage.py
src/pipelines/: consumption.py  consumption_pipeline.py  stations.py  stations_pipeline.py
src/sql/: consumption.sql  stations.sql
src/stations/: fetcher.py  processor.py  storage.py
src/utils/: api.py  api_client.py  config.json  config.py  configuration_classes.py  database.py  file_handler.py  files.py  logging.py  logging_config.py  pipeline_classes.py  pipelines.py
tests/: conftest.py  test_api.py  test_configuration.py  test_configuration_manager.py  test_database.py  test_files.py  test_pipelines.py
tests/e2e/: test_workflows.py
tests/fixtures/config/: invalid_api_type.json  missing_required_fields.json  mixed_configs.json  valid_data_gouv.json  (+1 more)
tests/integration/: test_integration.py
tests/unit/: test_api.py  test_configuration.py  test_consumption_pipeline.py  test_database.py  test_files.py  test_pipelines.py  test_stations_pipeline.py
