[project]
name = "energy-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.2",
    "requests>=2.34.2",
    "pydantic>=2.0.0",
]

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "pytest-cov>=6.0.0",
]
